Goal compliance fixes. Using CommonTools.tokenize() instead of StringTokenizer.